<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context="com.begginers.restaurantmanagement.UserloginActivity">
    <include
        android:id="@+id/toobar_L"
        layout="@layout/toobar_login"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/toobar_L"
        >
        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/email"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:background="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding"
                android:maxLines="1"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/password"
                android:background="@color/white"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="@dimen/padding"
                android:maxLines="1"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnLogin"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@color/btn_login_bg"
                android:text="@string/login"
                android:textColor="@color/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnLinkToRegister"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
